# fast-api-study

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260621_0001_create_questions_table.py
app/: main.py
app/api/: router.py
app/api/v1/: health.py  router.py
app/api/v1/qna/: qna.py
app/core/: config.py  database.py
app/db/: session.py
app/models/: question.py
app/qna/: __init__.py  model.py
app/schemas/: __init__.py  question.py
docs/superpowers/plans/: 2026-06-21-docker-compose-app-runtime.md  2026-06-21-fastapi-basic-structure.md  2026-06-21-fastapi-uv-initial-setup.md  2026-06-21-postgresql-db-connection.md
docs/superpowers/specs/: 2026-06-21-docker-compose-app-runtime-design.md  2026-06-21-fastapi-basic-structure-design.md  2026-06-21-fastapi-uv-initial-setup-design.md  2026-06-21-postgresql-db-connection-design.md  2026-06-29-compose-primary-local-uv-secondary-design.md
tests/: test_alembic_configuration.py  test_main.py  test_question_model_schema.py
